--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-./kafka-data
+/kafka-data
 /kafka/kafka-data
+
+/chat/.gradle-cache
+/chat/.tools
+
+/anticheat/.gradle-cache
+/anticheat/.tools
+
+/gateway/.gradle-cache
+/gateway/.tools
+
+/matchmaking/.gradle-cache
+/matchmaking/.tools
+
+/stats/.gradle-cache
+/stats/.tools
+
+/store/.gradle-cache
+/store/.tools
